--- a/english.html
+++ b/english.html
@@ -249,6 +249,8 @@ Error message and password prompt
 
 <li>$:/user/styles</li>
 
+<li>9-side-wishing-star</li>
+
 <li>Alan Ball</li>
 
 <li>ayala malach pines</li>
@@ -259,9 +261,13 @@ Error message and password prompt
 
 <li>Bjork</li>
 
+<li>Christmas dinner</li>
+
 <li>Coen Sisters</li>
 
 <li>Elementary</li>
+
+<li>Eva Coen</li>
 
 <li>John Irving</li>
 
@@ -272,6 +278,8 @@ Error message and password prompt
 <li>Radio epgb</li>
 
 <li>soul</li>
+
+<li>the wishing star 01</li>
 
 <li>Yoyo</li>
 
@@ -8000,7 +8008,7 @@ Error message and password prompt
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
             &quot;title&quot;: &quot;Untitled&quot;,
-            &quot;text&quot;: &quot;https://yuvalerel.com/&quot;,
+            &quot;text&quot;: &quot; &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;&quot;,
             &quot;type&quot;: &quot;text/plain&quot;
         }
     }
@@ -8122,10 +8130,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20180915150316301" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/System</pre>
+<div created="20161023184709475" modified="20200115162503678" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20190226092930778" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200115162507703" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8134,7 +8142,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Yoyo [[Papa Yoel]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8300,6 +8308,23 @@ a.translation:hover { text-decoration: underline }
 .tootdiv a:hover {text-decoration: none; color: #f88}
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </div>
+<div created="20200115163447032" modified="20200115164708559" tags="Metafiction" title="9-side-wishing-star">
+<pre>
+!!![[Eva]]:
+
+This is a story I wrote in the winter of 2016, it begins with visiting Yoyo and Gura in Paris, for the Christmas dinner 2015 
+
+
+[img[pictures/cochav-hamishalot.jpg]]
+
+//
+For everything there is a season, and a time for every matter under heaven//:
+
+coming soon as possible
+
+
+ &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
+</div>
 <div created="20191113140946887" modified="20191113143105603" tags="[[outer sisters]] films tv [[tv series]]" title="Alan Ball">
 <pre>[img[pictures/alan-ball.jpg]]
 
@@ -8358,19 +8383,33 @@ Is where I want to be
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
-<div created="20180915085721246" modified="20200101125347574" tags="[[Monkeys with car keys]] [[outer sisters]]" title="Coen Sisters">
+<div created="20200115162658453" modified="20200115163052944" tags="Meals [[Food addicts]]" title="Christmas dinner">
+<pre>[img[pictures/aruchat-christmas.jpg]]
+
+coming soon as possible
+
+
+ &lt;&lt;heblink [[ארוחת כריסמס]]&gt;&gt;</pre>
+</div>
+<div created="20180915085721246" modified="20200115164634063" tags="[[Monkeys with car keys]] [[outer sisters]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
+
+
+''yall, these days were slowly filling the blank spaces that we'll create with translations from Hebrew''
+
+'' HEYU SHALOM,  ATT Unit ''
+
 
 !!![[yoyo]]:
 
 Hello,
 
-In December 2015, 10 days after Gura, Dandan and I moved into the apartment, we had friends over for the Christmas meal.
-It was a fantastic meal, gummy-a-bearge. I mostly remember me standing there, wobbling , crazy happy with myself.
+In December 2015, 10 days after Gura, Dandan and I moved into [[the apartment|the wishing star 01]], we had friends over for the [[Christmas dinner]].
+It was a fantastic meal, gummy-a-bearge. I mostly remember me standing there, wobbling, crazy happy with myself.
 
-For the opening lines, I'm pasting the part where Eva described me standing there, speaking in front of my friends at the 9-side-wishing-star:
+For the opening lines, I'm pasting the part where Eva described me standing there, speaking in front of my friends at the [[9-side-wishing-star]]:
 
-Pretty long time ago, 13-14 years ago, I has this.... phase. I was a huge pothead, and regardless, I've always liked to invent things. One of the things that I invented back then was that I am a basic Hungarian woman, named Eva Coen, and actually as far as I was concerned, I was the sister of Ethan and Joel Coen, the Coen brothers, even though Joel is the name of my father and I don't have any brothers, only four sisters, just like [[Dr Derek Shepherd|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. The idea remained and continued to evolve, and with time I decided that I want to establish a group of independent but related creators that will be called Coen sisters. I shared it with Gura, my beautiful little sister. Gura and I have worked for many days, developing the agenda and the characters, the concept and the drama. We wrote a foundation for eight chapters series about the sisters with an option to continue... And why am I telling you this? Because when I arrived to the apartment I realized that that's the launch pad of the sisters, and that's why I built the lab in my sleeping room. And now, for the real thing. I'm inviting each one of you to join the group.  A basic condition for entering the sisters' project is that Saraleh would have liked it. Who is Saraleh? Saraleh is a woman who died due to brain cancer, just like Meir Ariel told on the movie [[THE CAMPAIGN OF MEIR ARIEL|https://www.youtube.com/watch?v=yFXUEoXCkT8]] (5:30 minutes into the movie), about a woman who was taken young, and had a very interesting mind, and he wished that she was his literature teacher. He tells about her craziest most brilliant jokes, and about the urge he had to write her a goodbye note on the shloshim, thirty days after she passed, something like a love poem for his teacher that he might even ask her to grade. And who decides whether deceased Saraleh would have liked it or not? The naive thing that I aspire is neither I nor any other sisters' member ever have to behave as a politician, because I'm sure that Saraleh would have not liked it.
+Pretty long time ago, 13-14 years ago, I had this.... phase. I was high all the time, and regardless, I've always liked to invent things. One of the things that I invented back then was that I am a basic Hungarian woman, named Eva Coen, and actually as far as I was concerned, I was the sister of Ethan and Joel Coen, the Coen brothers, even though Joel is the name of my father and I don't have any brothers, only four sisters, just like [[Dr Derek Shepherd|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. The idea remained and continued to evolve, and with time I decided that I want to establish a group of independent but related creators that will be called Coen sisters. I shared it with Gura, my beautiful little sister. Gura and I have worked for many days, developing the agenda and the characters, the concept and the drama. We wrote a foundation for eight chapters series about the sisters with an option to continue... And why am I telling you this? Because when I arrived to the apartment I realized that that's the launch pad of the sisters, and that's why I built the lab in my sleeping room. And now, for the real thing. I'm inviting each one of you to join the group.  A basic condition for entering the sisters' project is that Saraleh would have liked it. Who is Saraleh? Saraleh is a woman who died due to brain cancer, just like Meir Ariel told in the movie [[THE CAMPAIGN OF MEIR ARIEL|https://www.youtube.com/watch?v=yFXUEoXCkT8]] (5:30 minutes into the movie), about a woman who was taken young, and had a very interesting mind, and he wished that she was his literature teacher. He tells about her craziest most brilliant jokes, and about the urge he had to write her a goodbye thirty days after she passed, something like a love poem for his teacher that he might even ask her to grade. And who decides whether deceased Saraleh would have liked it or not? The naive thing that I aspire is neither I nor any other sisters' member ever have to behave as a politician, because I'm sure that Saraleh would have not liked it.
 
 Or like Gura and I wrote back then, when I lived between the oaks:
 
@@ -8390,6 +8429,23 @@ Be good.
 Sherlock, in the Jonny Lee Miller version, watches seven screens at the same time, as his gaze is fixated on an imaginary spot on top of and the center of the screens, so that he practically sees all of them, and if something unusual pops up, he freezes the picture and knows that there's something in it. Sweet Watson completes his words. In the next cut, they'll talk about it with Marcus and Gregson, and the mystery is solved or will be solved really soon. It's a super-fun series.
 &lt;&lt;heblink [[אלמנטרי]]&gt;&gt;</pre>
 </div>
+<div created="20200115145347212" modified="20200115151526343" tags="" title="Eva Coen">
+<pre>[img[pictures/eva-coen.jpg]]
+
+!!![[Gura]]:
+
+Of all the people who came to us, the tale with Eva is the weirdest, although not because of her, because Yoyo, who used to live at the flea market in Jaffa at that time, and used to drink coffee at Puah, simply addressed Eva one day, who was a pastry-cook there, asking her if he can talk to her. Within few minutes into their first conversation he told her about me and about himself, as described in the first book BY THE WAY AS AN ASIDE.
+
+Eva is a nearly-51-year-old woman, she was born in 1966, she has a nearly-21-year-old daughter named Iris, and at the Christmas dinner, almost one year ago, she met Dr. Philippe Lumber, my shrink, whom she loved since she was twenty something years old and he loved her.
+
+Since that diner I've lost Dandan, but this isn't the place to bring it up, and I'm much better now.
+
+There aren't enough words or space to describe Eva, and whatsoever she has written not so little for the archive herself.
+
+Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, stories by Dana the doll, about her life with Iris, the daughter of Eva and Eva.
+
+ &lt;&lt;heblink [[אווה כהן]]&gt;&gt;</pre>
+</div>
 <div created="20191113143908637" modified="20191113144254373" tags="[[outer sisters]] films" title="John Irving">
 <pre>[img[pictures/john-irving.jpg]]
 
@@ -8404,8 +8460,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 <pre></pre>
 </div>
 <div created="20200101125351383" modified="20200101133049907" tags="" title="Papa Yoel">
-<pre>
-[img[pictures/aba-vetirza.jpg]]
+<pre>[img[pictures/aba-vetirza.jpg]]
 
 !!![[Yoyo]]:
 
@@ -8444,9 +8499,16 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
 </div>
+<div created="20200115161700360" modified="20200115162215492" tags="Houses 9-side-wishing-star" title="the wishing star 01">
+<pre>[img[pictures/hadira.jpg]]
+
+''Yoyo's first sketch of the empty apartment''
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 01]]&gt;&gt;</pre>
+</div>
 <div created="20200101132642919" modified="20200101133516550" tags="" title="Yoyo">
-<pre>
-[img[pictures/yoyo.jpg]]
+<pre>[img[pictures/yoyo.jpg]]
 
  !!![[Iry]]:
 
