--- a/index.html
+++ b/index.html
@@ -9163,7 +9163,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="יויו [[אבא יואל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כוכב המשאלות בעל תשע הצלעות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9183,7 +9183,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200101133539288" title="$:/temp/search">
+<div created="20161023184814872" modified="20200115163232822" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9506,7 +9506,7 @@ well,
 
 ברור לי שאני לא אמור לקדם רשתות, אבל בהמלצת חבר, כאבי הגב שלי הובילו אותי לחנות [[הזאת|https://patuah.co.il/he/b/weshoes-%D7%91%D7%99%D7%90%D7%9C%D7%99%D7%A7-3-%D7%AA%D7%9C-%D7%90%D7%91%D7%99%D7%91--u10499]], שבביאליק 3, ואחרי שקניתי לי זוג נעלי hoka חייזריות אצל המוכרת הנהדרת, אני מוכרח להמליץ מכל בחינה.</pre>
 </div>
-<div created="20170608165812345" modified="20200101133645815" tags="[[משפחת באומן]] [[נאמני הגנזך]]" title="אבא יואל">
+<div created="20170608165812345" modified="20200115151118168" tags="[[משפחת באומן]] [[נאמני הגנזך]]" title="אבא יואל">
 <pre>[img[pictures/aba-vetirza.jpg]]
 
 !!![[יויו]]:
@@ -9622,8 +9622,8 @@ well,
 
 </pre>
 </div>
-<div created="20161215192348716" modified="20190314144440924" tags="[[אחות כהן]] אימהות" title="אווה כהן">
-<pre>[img[pictures/7h68QEIPyKEHEZ8B.jpg]]
+<div created="20161215192348716" modified="20200115151207745" tags="[[אחות כהן]] אימהות" title="אווה כהן">
+<pre>[img[pictures/eva-coen.jpg]]
 
 
 !!![[גורה]]:
@@ -9639,7 +9639,8 @@ well,
 קצרה היריעה מלספר על אווה, מה גם שהיא עצמה כתבה לא מעט בגנזך.
 
 לאחרונה אירי, אווה ואני עובדות יחד על [[אימא, סבתא ואני]], סיפורים מאת דנה הבובה, על [[חייה עם איריס|כשהם ישנים]], ביתה של אווה ואווה.
-</pre>
+
+&lt;&lt;englink [[Eva Coen]]&gt;&gt;</pre>
 </div>
 <div created="20170722121850671" modified="20170728185508522" tags="[[הסיפור על גורה]]" title="אווה מספרת  01">
 <pre>[img[pictures/hasipoor-1.jpg]]
@@ -10436,7 +10437,7 @@ well,
 
 &lt;&lt;list-links filter:&quot;[tag[ארוחות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161112191527440" modified="20181006145754220" tags="[[חיות אוכל]] ארוחות" title="ארוחת כריסמס">
+<div created="20161112191527440" modified="20200115162943422" tags="[[חיות אוכל]] ארוחות" title="ארוחת כריסמס">
 <pre>[img[pictures/aruchat-christmas.jpg]]
 
 
@@ -10472,6 +10473,8 @@ well,
 ובזה שאכתוב עכשיו את [[מתכוני ארוחת הכריסמס]].
 
 יול.
+
+&lt;&lt;englink [[Christmas dinner]]&gt;&gt;
 
 
 
@@ -11870,7 +11873,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;list-links filter:&quot;[tag[האחיות בלות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161111215423587" modified="20200101131057436" tags="[[קופים ממונעים]]" title="האחיות כהן">
+<div created="20161111215423587" modified="20200115154007593" tags="[[קופים ממונעים]]" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -13273,14 +13276,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 (אורז לבן: בסיר - כוס אורז, שתי כוסות מים וכמה גרגרי מלח על אש נמוכה עד שמתאדים הנוזלים)</pre>
 </div>
-<div created="20161112194346716" modified="20180704182615440" tags="[[כוכב המשאלות בעל תשע הצלעות]] בתים" title="כוכב המשאלות 01">
+<div created="20161112194346716" modified="20200115162328499" tags="[[כוכב המשאלות בעל תשע הצלעות]] בתים" title="כוכב המשאלות 01">
 <pre> 
 [img[pictures/hadira.jpg]]
-''הסקיצה ראשונית של יויו לדירה הריקה''
+''סקיצה ראשונית של יויו לדירה הריקה''
 
 
 
-קצת אחרי יום השנה למותה של [[אימא של יויו|דינה ז&quot;ל]] נסעתי לבקר אותו בפריז. הם עברו לדירה ענקית שנפלה לידיהם במחיר נמוך מאוד וריקה מכל תוכן. בהחלט עניין של מזל. זו דירה שגודלה שלוש מאות מטרים רבועים, מלבן של 25/12 לא כולל המרפסת. היא נמצאת בקומה שנייה בבניין רחב מתחת למונמרטרה. הם סידרו אותה מאפס כולל קירות וכולל החלפת כל החשמל והאינסטלציה שהיו במצב מסוכן, ובתמורה קיבלו את החוזה הזה לשלוש שנים או עד שיימצא פתרון לדירה, שאף אחד לא רצה להתעסק איתה בשלב זה מסיבה שלא סופרה להם. יויו, גורה ודןדן לא נכנסו לשאלות בעניין הדירה. הם באו לראות אותה דרך עורך דין שנהג לאכול בקוסקוס, וברגע שנכנסו הייתה להם הרגשה טובה, והגודל או העונק, קראו לזה איך שקראו לזה, היממו אותם והם סגרו חוזה. הם עבדו חודש וחצי סביב השעון בלי לעצור כולל העבודה אצל [[ז'נבייב]]. [[יויו]] נדלק. הוא מצא תוכנה חינמית לעיצוב פנים והלך על זה בכל הכוח. הם לקחו לימים האלה חמישה [[עובדים סינים|הסינים]], שעבדו בעבר עבור ז'נבייב. את עבודתם הפיק בפועל [[אלפרד]] לפי הוראות מסודרות של [[יויו]]. הסינים היו מקצוענים. בערבים כשחזרו מהעבודה המשיכו עוד כמה שעות. מדי ערב יויו עבר על כל דבר. בדק, ניקה, שייף מה שצריך, [[ודןדן|דןדן]] איתו. הם חילקו את הדירה לשלושה חלקים. בחלק האמצעי, לטובתו הקצו 120 מטרים רבועים, בנו מטבח וסלון, חדר שירות, מקלחת ושירותים. בשני האחרים, שגודלם היה 80 מטרים רבועים, הוסיפו רק חדרי אמבטיה ושירותים והשאירו הכול פתוח. בכל חדר יש צד שפונה אל הרחוב ובו חלון ענקי ולכל אלה מרפסת אחת גדולה. קירות הגבס שבנו היו בכל מיני אלכסונים שתוכננו בסימטריה מלאה וצבועים כולם לבן. לכל אחד מהחדרים, לעומת זאת, אריחים רבועים בצבע שונה. בסלון ובמטבח המרצפות ירוקות, בחדר של גורה ודןדן צהובות ואצל יויו תכולות. במבואת הכניסה הן בחרדל ואדום. על המרפסת שבחזית הדירה, שמרוצפת במרצפות שיש בגדלים שונים ובצורות שונות, בנוי חדר נוסף שגודלו 18 מטרים רבועים. החדר שימש בעבר [[כקליניקה|הקליניקה]] של רופא ולו יציאה לרחוב. הוא כולל חדר שירותים קטן וחמים המאובזר בטוש ובכיור. </pre>
+קצת אחרי יום השנה למותה של [[אימא של יויו|דינה ז&quot;ל]] נסעתי לבקר אותו בפריז. הם עברו לדירה ענקית שנפלה לידיהם במחיר נמוך מאוד וריקה מכל תוכן. בהחלט עניין של מזל. זו דירה שגודלה שלוש מאות מטרים רבועים, מלבן של 25/12 לא כולל המרפסת. היא נמצאת בקומה שנייה בבניין רחב מתחת למונמרטרה. הם סידרו אותה מאפס כולל קירות וכולל החלפת כל החשמל והאינסטלציה שהיו במצב מסוכן, ובתמורה קיבלו את החוזה הזה לשלוש שנים או עד שיימצא פתרון לדירה, שאף אחד לא רצה להתעסק איתה בשלב זה מסיבה שלא סופרה להם. יויו, גורה ודןדן לא נכנסו לשאלות בעניין הדירה. הם באו לראות אותה דרך עורך דין שנהג לאכול בקוסקוס, וברגע שנכנסו הייתה להם הרגשה טובה, והגודל או העונק, קראו לזה איך שקראו לזה, היממו אותם והם סגרו חוזה. הם עבדו חודש וחצי סביב השעון בלי לעצור כולל העבודה אצל [[ז'נבייב]]. [[יויו]] נדלק. הוא מצא תוכנה חינמית לעיצוב פנים והלך על זה בכל הכוח. הם לקחו לימים האלה חמישה [[עובדים סינים|הסינים]], שעבדו בעבר עבור ז'נבייב. את עבודתם הפיק בפועל [[אלפרד]] לפי הוראות מסודרות של [[יויו]]. הסינים היו מקצוענים. בערבים כשחזרו מהעבודה המשיכו עוד כמה שעות. מדי ערב יויו עבר על כל דבר. בדק, ניקה, שייף מה שצריך, [[ודןדן|דןדן]] איתו. הם חילקו את הדירה לשלושה חלקים. בחלק האמצעי, לטובתו הקצו 120 מטרים רבועים, בנו מטבח וסלון, חדר שירות, מקלחת ושירותים. בשני האחרים, שגודלם היה 80 מטרים רבועים, הוסיפו רק חדרי אמבטיה ושירותים והשאירו הכול פתוח. בכל חדר יש צד שפונה אל הרחוב ובו חלון ענקי ולכל אלה מרפסת אחת גדולה. קירות הגבס שבנו היו בכל מיני אלכסונים שתוכננו בסימטריה מלאה וצבועים כולם לבן. לכל אחד מהחדרים, לעומת זאת, אריחים רבועים בצבע שונה. בסלון ובמטבח המרצפות ירוקות, בחדר של גורה ודןדן צהובות ואצל יויו תכולות. במבואת הכניסה הן בחרדל ואדום. על המרפסת שבחזית הדירה, שמרוצפת במרצפות שיש בגדלים שונים ובצורות שונות, בנוי חדר נוסף שגודלו 18 מטרים רבועים. החדר שימש בעבר [[כקליניקה|הקליניקה]] של רופא ולו יציאה לרחוב. הוא כולל חדר שירותים קטן וחמים המאובזר בטוש ובכיור. 
+
+&lt;&lt;englink [[the wishing star 01]]&gt;&gt;</pre>
 </div>
 <div created="20171029153626721" modified="20171204153847789" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 02">
 <pre>[img[pictures/cochav-2.jpg]]
@@ -13767,7 +13772,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161113182253178" modified="20171206160917267" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]]" title="כוכב המשאלות בעל תשע הצלעות">
+<div created="20161113182253178" modified="20200115163432237" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]]" title="כוכב המשאלות בעל תשע הצלעות">
 <pre>!!![[אווה]]:
 
 זה סיפור שכתבתי בחורף 2016, והוא מתחיל בביקור אצל יויו וגורה בפריז, לארוחת כריסמס 2015
