--- a/index.html
+++ b/index.html
@@ -10437,7 +10437,7 @@ well,
 
 &lt;&lt;list-links filter:&quot;[tag[ארוחות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161112191527440" modified="20200115162943422" tags="[[חיות אוכל]] ארוחות" title="ארוחת כריסמס">
+<div created="20161112191527440" modified="20200115165618448" tags="[[חיות אוכל]] ארוחות" title="ארוחת כריסמס">
 <pre>[img[pictures/aruchat-christmas.jpg]]
 
 
@@ -13772,7 +13772,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161113182253178" modified="20200115163432237" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]]" title="כוכב המשאלות בעל תשע הצלעות">
+<div created="20161113182253178" modified="20200115165720743" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]]" title="כוכב המשאלות בעל תשע הצלעות">
 <pre>!!![[אווה]]:
 
 זה סיפור שכתבתי בחורף 2016, והוא מתחיל בביקור אצל יויו וגורה בפריז, לארוחת כריסמס 2015
@@ -13785,7 +13785,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 //&quot;לַכֹּל זמן, ועת לכל חפץ תחת השמים&quot;. 
 (קהלת ג' א')//
 
-&lt;&lt;list-links filter:&quot;[tag[כוכב המשאלות בעל תשע הצלעות]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[כוכב המשאלות בעל תשע הצלעות]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[9-side--wishing-star]]&gt;&gt;</pre>
 </div>
 <div created="20191107114444294" modified="20191111210520820" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="כולי עלמא">
 <pre>[img[pictures/kuli-alma.jpg]]
