--- a/index.html
+++ b/index.html
@@ -9163,7 +9163,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כוכב המשאלות בעל תשע הצלעות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="הגשר [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9183,7 +9183,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200115163232822" title="$:/temp/search">
+<div created="20161023184814872" modified="20200120153626953" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11983,12 +11983,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 כשהייתי בת 11 לקחתי איתי מאושרת, את המצלמה שקיבלתי מסבתי וסבי ליום ההולדת, לטיול בית ספרי [[לכרמל|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%A8%D7%9E%D7%9C]]. בין השאר ביקרנו באתר מלא האפיל - [[נחל הקישון|https://he.wikipedia.org/wiki/%D7%A0%D7%97%D7%9C_%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. נראה היה לי יפה מרחוק [[כל הארובות|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%A9%D7%AA_%D7%94%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. מה התאכזבתי כשהתמונות הגיעו מהפיתוח וגיליתי, שלא הבנתי, שהמצלמה לא מסננת, לא מתעלמת מהגדר שעומדת בינה ובין הארובות המרהיבות, ואני כן. מכאן כבר התחלתי לשים לב, והעין התחילה ללמוד לדעת מה לא ייצטלם טוב. הגוף התעדכן. צילום אומנם לא הפך לתחביב שלי, אך אני ממשיכה להתעניין בגופינו החכם, ואפשר לשפר את היכולות והחושים שלו כל הזמן, מה שנקרא [[באלכסנדרונית|שיטת אלכסנדר]] - למידה. אפשר, למשל, ללמד את [[בלוטות הטעם|אבקות]], עד שאתה הופך [[פיינשמעקר|ארוחת ראש השנה]] כדבעי.</pre>
 </div>
-<div created="20170713130412612" modified="20190310131549210" tags="סדרות טלוויזיה" title="הגשר">
+<div created="20170713130412612" modified="20200120153623351" tags="סדרות טלוויזיה" title="הגשר">
 <pre>[img[pictures/hagesher.jpg]]
 
 !!![[יויו]]:
 
-אל תגיד [[הגשר|http://www.imdb.com/title/tt1733785/]], תגיד [[סאגה נורן|http://www.imdb.com/character/ch0236307/?ref_=tt_cl_t1]].</pre>
+אל תגיד [[הגשר|http://www.imdb.com/title/tt1733785/]], תגיד [[סאגה נורן|https://en.wikipedia.org/wiki/Saga_Nor%C3%A9n]].</pre>
 </div>
 <div created="20170505224151892" modified="20180208153812859" tags="[[אחיות חוץ]] מוזיקה" title="הדוד האמיתי">
 <pre>[img[pictures/hadod-haamiti.jpg]]
