--- a/english.html
+++ b/english.html
@@ -8309,8 +8309,7 @@ a.translation:hover { text-decoration: underline }
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </div>
 <div created="20200115163447032" modified="20200115164708559" tags="Metafiction" title="9-side-wishing-star">
-<pre>
-!!![[Eva]]:
+<pre>!!![[Eva]]:
 
 This is a story I wrote in the winter of 2016, it begins with visiting Yoyo and Gura in Paris, for the Christmas dinner 2015 
 
@@ -8391,13 +8390,16 @@ coming soon as possible
 
  &lt;&lt;heblink [[ארוחת כריסמס]]&gt;&gt;</pre>
 </div>
-<div created="20180915085721246" modified="20200115164634063" tags="[[Monkeys with car keys]] [[outer sisters]]" title="Coen Sisters">
+<div created="20180915085721246" modified="20200120160555003" tags="[[Monkeys with car keys]] [[outer sisters]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
 ''yall, these days were slowly filling the blank spaces that we'll create with translations from Hebrew''
 
 '' HEYU SHALOM,  ATT Unit ''
+
+
+[img[pictures/attunitenglish.jpg]]
 
 
 !!![[yoyo]]:
