דליה, מה עשית היום, קסין סנטר

--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@ Error message and password prompt
 
 <li>weshoes בביאליק 3</li>
 
+<li>Xin center</li>
+
 <li>אבא יואל</li>
 
 <li>אבינו</li>
@@ -586,6 +588,8 @@ Error message and password prompt
 <li>הורים במשרה מלאה</li>
 
 <li>הורמונים</li>
+
+<li>החדר של דליה</li>
 
 <li>החיים זה לא דיבורים</li>
 
@@ -944,6 +948,8 @@ Error message and password prompt
 <li>מגדל בבל</li>
 
 <li>מדו</li>
+
+<li>מה עשית היום למען השלום</li>
 
 <li>מה שבאמת קרה בארוחת כריסמס</li>
 
@@ -9151,10 +9157,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20191111210636746" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20200127115409970" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20191111210639917" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200127115411174" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9163,7 +9169,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="הגשר [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[החדר של דליה]] הורמונים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9183,7 +9189,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200120153626953" title="$:/temp/search">
+<div created="20161023184814872" modified="20200127121014181" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9505,6 +9511,15 @@ well,
 !!![[תומר]]:
 
 ברור לי שאני לא אמור לקדם רשתות, אבל בהמלצת חבר, כאבי הגב שלי הובילו אותי לחנות [[הזאת|https://patuah.co.il/he/b/weshoes-%D7%91%D7%99%D7%90%D7%9C%D7%99%D7%A7-3-%D7%AA%D7%9C-%D7%90%D7%91%D7%99%D7%91--u10499]], שבביאליק 3, ואחרי שקניתי לי זוג נעלי hoka חייזריות אצל המוכרת הנהדרת, אני מוכרח להמליץ מכל בחינה.</pre>
+</div>
+<div created="20200123141543234" modified="20200127122547805" tags="[[כאן בגטו]] [[מטא בדיון]] [[האחיות בלות]]" title="Xin center">
+<pre>[img[pictures/xin-center.jpg]]
+
+!!![[אימא של ג'אז]]:
+
+כן את הולכת בגטו מרוחק יותר, וחותכת מטשרניחובסקי לקינג ג'ורג' דרך רחוב המכבי, כשרואה את ורדית שלא ראית מזמן לפתע, ואת נכנסת איתה [[למקום הנעים הזה|https://www.xin.co.il/]] שלא היכרת, שהוא מרכז לרפואה משלימה מלא טיפולים ומוצרים, ושותה איתה תה ויוצאת עד לפעם הבאה מצוידת בתוסף מעולה [[לגיל הבלות|הורמונים]], וקרם פנים רך וטוב שמורכב, בין השאר, [[מאחד מהאבות הקדמונים|https://he.wikipedia.org/wiki/%D7%90%D7%AA%D7%A8%D7%95%D7%92]] של משפחת ההדרים, וכל הבוקר המעוך הזה נראה הרבה פחות קודר.
+
+</pre>
 </div>
 <div created="20170608165812345" modified="20200115151118168" tags="[[משפחת באומן]] [[נאמני הגנזך]]" title="אבא יואל">
 <pre>[img[pictures/aba-vetirza.jpg]]
@@ -12087,6 +12102,15 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 כן, כשאנחנו ילדות אנחנו נכנסות [[בפייד אין|https://he.wikipedia.org/wiki/%D7%94%D7%AA%D7%91%D7%92%D7%A8%D7%95%D7%AA_%D7%9E%D7%99%D7%A0%D7%99%D7%AA]] שאורך כמה שנים, למעגל ההורמונלי עד הבשלות ללדת. [[הורמונים|https://he.wikipedia.org/wiki/%D7%94%D7%95%D7%A8%D7%9E%D7%95%D7%9F]] ששמם הכללי הוא [[אסטרוגן|https://he.wikipedia.org/wiki/%D7%90%D7%A1%D7%98%D7%A8%D7%95%D7%92%D7%9F]] משתתפים בפעילויות שונות של הגוף ומוציאים אותנו מדעתינו בלי שידענו. אחר כך לאורך 30 שנה בערך, אם צריך או לא, [[אנחנו ממשיכות|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%97%D7%96%D7%95%D7%A8_%D7%94%D7%97%D7%95%D7%93%D7%A9%D7%99]] לבייץ, להיות לפני מחזור של גלי כאב, עייפות, מצבי רוח, חוסר סבלנות ועוד, עד שמתחיל [[הפייד אאוט|https://he.wikipedia.org/wiki/%D7%92%D7%99%D7%9C_%D7%94%D7%9E%D7%A2%D7%91%D7%A8_%D7%90%D7%A6%D7%9C_%D7%A0%D7%A9%D7%99%D7%9D]], ששיאו בהפסקת המחזור, גלי חום, מצבי רוח, הזקנה הקופצת, העור המתקמט, כאבים ועוד אבל יש תמורה - אין יותר מחזור חודשי ויש תקווה שכל המהומה הזו תיפסק, ונחזור להיות כמו שהיינו כשהיינו בנות שמונה.</pre>
 </div>
+<div created="20200126135042452" modified="20200127132216254" tags="[[כאן בגטו]] [[מטא בדיון]] בתים [[סיפורים אמיתיים]]" title="החדר של דליה">
+<pre>[img[pictures/dalya.jpg]]
+
+!!![[תומר]]:
+
+זה החדר של דליה, המורה הנפלאה שלי [[לאלכסנדר|שיטת אלכסנדר]], אליה אני מגיע מידי שבוע לשיעור. אנחנו נכנסים לחדר לא לפני שישבנו ודיברנו ליד שולחן האוכל, שנמצא בין המטבח לסלון עם החלונות הרחבים מולם עומדת שורת ברושים. אי של שקט בתוך הכל. אחר כך על הכיסא, בזמן שדליה מכוונת אותי ומדברת אלי, אני עוצר, נושם, שולח בחיבור, מחדש את המבט כשיונה לבנה נוחתת על החלון שמולי. &quot;ראית את זה?&quot;, היא שואלת אותי. &quot;כן&quot;, אני עונה לה, ואני שוב קצת אחר ומלא [[צליל חדש|https://www.youtube.com/watch?v=oDBl0aqrl6Q]].
+
+</pre>
+</div>
 <div created="20170514201348734" modified="20170514233042321" tags="[[סיפורים אמיתיים]]" title="החיים זה לא דיבורים">
 <pre>[img[pictures/hachaim-ze-lo.jpg]]
 
@@ -14655,6 +14679,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[אנג'ליק]]:
 
 [[מדו סופרנו|http://www.imdb.com/name/nm0797464/]] המתוקה, היפה, הילדה הטובה, הרגישה, האיכפתית. חתכו את הסידרה בזמן, אחרת, מסכנה, הייתה צריכה להתמודד עם [[שאלות קשות|https://www.youtube.com/watch?v=cCDLz2Wabgg]].</pre>
+</div>
+<div created="20200127105036204" modified="20200127115324936" tags="[[כאן בגטו]] בתים [[סיפורים אמיתיים]] [[מטא בדיון]]" title="מה עשית היום למען השלום">
+<pre>[img[pictures/ma-asita-hayom.jpg]]
+
+!!![[תומר]]:
+
+אני יוצא משיעור אצל [[דליה|החדר של דליה]], עולה לכיוון היכל התרבות, חוצה את רחבת הבימה ושוב מולי השלט הנהדר הזה.
+
+</pre>
 </div>
 <div created="20161114202954459" modified="20170514231925732" title="מה שבאמת קרה בארוחת כריסמס">
 <pre>[img[pictures/kie87qScl5HLeyVw.JPG]]
