כלים בכיור וגונג

--- a/index.html
+++ b/index.html
@@ -445,6 +445,8 @@ Error message and password prompt
 
 <li>ג'ונג</li>
 
+<li>ג'ונג נוסע לליון</li>
+
 <li>ג'יימס גנדולפיני</li>
 
 <li>ג'יין פונדה</li>
@@ -822,6 +824,8 @@ Error message and password prompt
 <li>כישורים חברתיים</li>
 
 <li>ככל הנראה</li>
+
+<li>כלים בכיור</li>
 
 <li>כמולונז</li>
 
@@ -9160,7 +9164,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200127115409970" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200127115411174" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200130162013727" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9169,7 +9173,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[החדר של דליה]] הורמונים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ג'ונג נוסע לליון]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9189,7 +9193,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200127121014181" title="$:/temp/search">
+<div created="20161023184814872" modified="20200130163248234" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10828,6 +10832,13 @@ Is where I want to be
 
 
 </pre>
+</div>
+<div created="20200129165251578" modified="20200130163340657" tags="[[מטא בדיון]] [[סיפורים אמיתיים]]" title="ג'ונג נוסע לליון">
+<pre>[img[pictures/dojo-lyon.jpg]]
+
+!!![[אירי וגורה]]:
+
+חוץ מזה [[שג'ונג|ג'ונג]] מגיע לכל מקום [[במטרו|תחבורה ציבורית]], פעם בחודש בערך הוא לוקח רכבת לליון [[לדו'ג'ו|https://dojolyon.fr/]] של המאסטר שלו [[לאייקידו|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%A7%D7%99%D7%93%D7%95]].</pre>
 </div>
 <div created="20170829074025058" modified="20190310131147652" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים טלוויזיה" title="ג'יימס גנדולפיני">
 <pre>[img[pictures/james-gandolfini.jpg]]
@@ -13853,6 +13864,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[אימא של ג'אז]]:
 
 מאחורי העציצים, הקיר והחלונות הנאים למראה האלה, שברחוב ביל&quot;ו 29 פינת כרמיה 15, בשקט ובענווה שוכנת [[&quot;ככל הנראה&quot;|https://www.google.co.il/maps/uv?hl=en&amp;pb=!1s0x151d4b78bb3c3de1:0xbce6de6b0ed80951!3m1!7e115!4shttps://lh5.googleusercontent.com/p/AF1QipPHn_r-3sxsjpJKXwkGj4tzzEmsBMFayxYy7bJm%3Dw284-h160-k-no!5z15vXm9ecINeU16DXqNeQ15Qg15HXmdec15UgLSBHb29nbGUgU2VhcmNo&amp;imagekey=!1e10!2sAF1QipPHn_r-3sxsjpJKXwkGj4tzzEmsBMFayxYy7bJm&amp;sa=X&amp;ved=2ahUKEwigqdac7cjlAhXE6aQKHdEXDoUQoiowCnoECA8QBg]] - המספרה החביבה עלי, ובתוכה מני הנפלא והבנות שאיתו - וזה בילוי בפני עצמו.</pre>
+</div>
+<div created="20200130155540635" modified="20200130162305242" tags="[[חיות אוכל]] בתים ילדים מטבחים [[משפחת באומן]]" title="כלים בכיור">
+<pre>[img[pictures/kelim-bakiyor.jpg]]
+
+!!![[גורה]]:
+
+[[אימא שלי|דינה ז&quot;ל]] לא יכלה לסבול כלים בכיור, וגם אני לא יכולה לסבול כלים בכיור, אלא אם הם נקיים מלכלוך שמביא חרקים ומחלות ומלאים במים וסבון. למזלי גם [[יויו]] ירש מאימא את [[המחלה|יסודי או ocd]], [[ואירי|אירי]] היא בכלל מחלה מהלכת. אז זו פינה סגורה [[בדירה|כוכב המשאלות 01]].</pre>
 </div>
 <div created="20180416185136170" modified="20180605131548272" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] הצוות [[למה הדבר דומה]] מתכונים" title="כמולונז">
 <pre>[img[pictures/cmolonez.jpg]]
